# zTerm

./: .gitignore  NOTICE  README.md  README.zh-CN.md  THIRD_PARTY_NOTICES.md  index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  paths.rs  state.rs
src-tauri/src/commands/: ai.rs  command_completion.rs  credential.rs  external_launch.rs  history.rs  mcp.rs  mod.rs  server_info.rs  sessions.rs  settings.rs  sftp.rs  ssh_container.rs  terminal.rs  terminal_profile.rs  workspace.rs
src-tauri/src/models/: ai.rs  command_completion.rs  credential.rs  history.rs  mod.rs  server_info.rs  session.rs  settings.rs  sftp.rs  ssh_container.rs  terminal.rs  terminal_profile.rs  workspace.rs
src-tauri/src/security/: mod.rs  redaction.rs
src-tauri/src/services/: ai_chat_service.rs  ai_chat_stream_service.rs  ai_conversation_service.rs  ai_risk.rs  ai_tool_service.rs  command_completion_service.rs  (+19 more)
src-tauri/tests/: ai_conversation_tool_service.rs  ai_provider_settings.rs  ai_risk.rs  app_settings_storage.rs  credential_service.rs  file_transfer_view_state.rs  history_service.rs  mcp_service.rs  security_redaction.rs  server_info_service.rs  sessions_storage.rs  sftp_service.rs  sftp_smoke.rs  ssh_container_smoke.rs  storage_migrations.rs  terminal_command_builders.rs  terminal_manager.rs  terminal_profiles.rs  terminal_ssh_smoke.rs  transfer_queue.rs  workspace_storage.rs
(+194 files in other folders)
